[project]
name = "cloudflare-ddns"
version = "0.1.0"
description = "Unofficial Cloudflare DDNS"
authors = [
    {name = "Prince Duepa",email = "kannahprince12@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cloudflare (>=4.3.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
